update java primivite